--- a/styles.css
+++ b/styles.css
@@ -273,3 +273,24 @@ body {
 .level-picker input:disabled::-webkit-slider-thumb { opacity: 0; }
 .level-picker input:disabled::-moz-range-thumb { opacity: 0; }
 .level-picker input:disabled::-ms-thumb { opacity: 0; }
+
+
+/* v14: sleeker pills + stronger thumb hide */
+.btn, .dd-trigger, .toggle {
+  border-radius: calc(var(--radius) + 2px);
+  box-shadow: 0 1px 2px rgba(0,0,0,.06);
+  border: 1px solid var(--ring);
+  background: var(--card);
+}
+.btn:hover, .dd-trigger:hover, .toggle:hover {
+  box-shadow: 0 2px 6px rgba(0,0,0,.08);
+}
+.btn { height: 38px; }
+.dd-trigger { height: 38px; }
+.toggle { height: 38px; }
+
+/* Hide thumb by collapsing size as well */
+.level-picker input:disabled { --thumb: 0px; opacity: .55; cursor: not-allowed; }
+.level-picker input:disabled::-webkit-slider-thumb { width: 0; height: 0; opacity: 0; }
+.level-picker input:disabled::-moz-range-thumb { width: 0; height: 0; opacity: 0; }
+.level-picker input:disabled::-ms-thumb { width: 0; height: 0; opacity: 0; }
